--- a/gb/20/1/24/n11817849.md
+++ b/gb/20/1/24/n11817849.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jvzcdz2791/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jvzcdz2791/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>武汉肺炎失控！ “关心政治”或可救命</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1195361365-600x400.jpg" />
-<h6>武汉肺炎爆发。图为2020年1月23日到达悉尼机场的中国空乘人员。（PETER PARKS / AFP）
+<h6>武汉肺炎爆发。图为2020年1月23日到达悉尼机场的中国空乘人员。(PETER PARKS/AFP)
 </h6>
 <hr>
-<p>【大纪元2020年01月24日讯】近日，笔者同事到泰国旅游，遇到中国大陆游客，同事关心地问起<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md">疫情</a>，没想到这位大陆同胞十分潇洒地说：“没事，政府都控制住了。”认为外界媒体报导的都是谣言。结果不到二个星期疫情再也无法隐瞒，1月20日，习近平突然就<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md">武汉</a>疫情公开谈话，要遏制疫情蔓延，尽快查明病毒感染和传播原因…所谓的“谣言”原来是真相。</p>
-<p>习近平同时要求“加强舆论引导，维护大局稳定，确保过节安全”; 言下之意，大陆媒体报导<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md">疫情</a>仍需服务中共政权，确保当局政治稳定。目前许多大陆医护人员，甚至殡仪馆人员都表示疫情感染人数远远超过官方公布的数字，显见中共当局仍在掩盖疫情。</p>
+<p>【大纪元2020年01月24日讯】近日，笔者同事到泰国旅游，遇到中国大陆游客，同事关心地问起<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>，没想到这位大陆同胞十分潇洒地说：“没事，政府都控制住了。”认为外界媒体报导的都是谣言。结果不到二个星期疫情再也无法隐瞒，1月20日，习近平突然就<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md#1">武汉</a>疫情公开谈话，要遏制疫情蔓延，尽快查明病毒感染和传播原因…所谓的“谣言”原来是真相。</p>
+<p>习近平同时要求“加强舆论引导，维护大局稳定，确保过节安全”; 言下之意，大陆媒体报导<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>仍需服务中共政权，确保当局政治稳定。目前许多大陆医护人员，甚至殡仪馆人员都表示疫情感染人数远远超过官方公布的数字，显见中共当局仍在掩盖疫情。</p>
 <h2>当局隐瞒疫情 危及民众性命</h2>
-<p>回顾疫情爆发时间轴，2019新型冠状病毒又称<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>，疫情自去年12月底即传出，但<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md">武汉</a>官方在2020年1月1日以传播谣言为由，抓捕8名发布疫情的武汉网民，警方称，对8人因散布疫情人传人等“不实信息”进行“依法处理”，还威胁对“编造、传播、散布谣言”者“绝不姑息”。</p>
+<p>回顾疫情爆发时间轴，2019新型冠状病毒又称<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>，疫情自去年12月底即传出，但<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md#1">武汉</a>官方在2020年1月1日以传播谣言为由，抓捕8名发布疫情的武汉网民，警方称，对8人因散布疫情人传人等“不实信息”进行“依法处理”，还威胁对“编造、传播、散布谣言”者“绝不姑息”。</p>
 <p>随后，在疫情难以控制的情况下，当局被迫通报武汉市感染人数，然而，官方对外声称没有新增病例，从1月3日到1月18日之间一直维持在41例，没有人传人，疫情可控制等。于此期间，肺炎疫情扩散至泰国与日本，大陆网友还称武汉肺炎是“爱国病毒”，只传染外国人。</p>
 <p>直至1月18日，武汉当局才公布新增病例，1月19日武汉肺炎病例累计达198例。然而，直到1月19日之前，中共当局都未通报任何武汉以外的疑似或确诊病例，也没有明确承认有人传人病例发生，武汉市疾病预防控制中心主任李刚1月19日在记者会上还宣称：“疫情是可防可控的。”</p>
 <p>然而20日习近平公开谈话之后，从20日到23日病例激增，确认疫情会人传人，截至24日早上，中国大陆确诊病例至少830例，另有395例疑似病例，已造成18人死亡。至此，已可证实中共隐瞒疫情，共产党政治惯用的“欺骗”统治策略，危及中国人乃至全世界各国民众的生命。</p>
@@ -26,38 +26,44 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11817849.htm">武汉肺炎失控！ “关心政治”或可救命</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11813337.htm">武汉肺炎传播途径 分析：一人传染多人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812336.htm">袁斌：从萨斯到武汉肺炎 中共撒谎本性不变</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11811543.htm">【拍案惊奇】武汉肺炎汹汹 多国防备 朝鲜锁国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11811322.htm">美确诊首例武汉肺炎患者 加拿大加强机场检测</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810793.htm">【四维健康】杨景端：武汉肺炎为何从“这个时间”开始激增</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11811379.htm">武汉肺炎蔓延至22省 全国已确诊324例</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】全国确诊肺炎830例死25人 湖北封多市</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816845.htm">病人突倒地 武汉多个视频震惊网络 遭封杀</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11815654.htm">传武汉病毒命名SARI属SARS进化病毒</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11815462.htm">【翻墙必看】武汉女子混过机场安检逃至法国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/14/n11793221.htm">【历史回眸】做梦都是灭共复国的上将陈诚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11778584.htm">【命理】天灾注死者天有定 古北京大地震幼儿见证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11797750.htm">台湾2020大选结果命理观</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/14/n11793176.htm">【才子佳人】才貌双全的施良娣为何下嫁黔娄</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11814163.htm">【内幕】大批医护感染 疫情远超公开数据</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812966.htm">武汉一家6人染肺炎 1死1急救 2重症医院不收</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11813994.htm">武汉封城：离境通道关闭 公交全停</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11814532.htm">【拍案惊奇】武汉封城事已迟 市民恐慌外逃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816883.htm">【热点互动】武汉封城 疫情重大升级意味什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816092.htm">【十字路口】武汉肺炎3大风险恐加速疫情蔓延</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11815387.htm">曾之乔与辰亦儒宣布结婚 小年夜甜晒合照</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11809509.htm">林志玲低调现身《红白》 全程观赏Akira演出</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11809704.htm">长相滑稽的小狗在网上走红 最终被人收养</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810594.htm">惧怕赴一线抗击武汉肺炎 一网友求朱一龙打气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816941.htm">汤唯拍戏患上肺炎 自责带女儿在身边同时感染</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/22/n11813337.md#1">武汉肺炎传播途径 分析：一人传染多人</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/22/n11812336.md#1">袁斌：从萨斯到武汉肺炎 中共撒谎本性不变</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/22/n11811543.md#1">【拍案惊奇】武汉肺炎汹汹 多国防备 朝鲜锁国</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/21/n11811322.md#1">美确诊首例武汉肺炎患者 加拿大加强机场检测</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/21/n11810793.md#1">【四维健康】杨景端：武汉肺炎为何从“这个时间”开始激增</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/21/n11811379.md#1">武汉肺炎蔓延至22省 多省市首现病例</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jvzcdz2791/djy/blob/master/gb/20/1/24/n11817849.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jvzcdz2791/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jvzcdz2791/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/12/18/n2367165.md#1" target="_blank">组图：法轮功在海峡两岸的强烈对比</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943833.md#1">疫情肆虐 美国民众集体诉讼中共当局六被告</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">疫情影响无法开业 山东商户吁减租遭暴力抓捕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945347.md#1">武汉小区封楼20多天 又确诊2例 居民焦虑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11817849.htm">武汉肺炎失控！ “关心政治”或可救命</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/24/n11817849.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
